@@ -56,3 +56,56 @@ libraryDependencies ++= Seq(
 //  ,"com.lihaoyi" %% "os-lib" % "0.7.1"
 
 )
+
+
+enablePlugins(sbtdocker.DockerPlugin, JavaAppPackaging)
+
+
+// Define the Dockerfile
+dockerfile in docker := {
+  val jarFile = artifactPath.in(Compile, packageBin).value
+  val classpath = (managedClasspath in Compile).value
+  val mainclass =  "com.komlan.lab.market.StockServer"
+  val jarTarget = s"/app/${jarFile.getName}"
+  // Make a colon separated classpath with the JAR file
+  val classpathString = classpath.files.map("/app/" + _.getName).mkString(":") + ":" + jarTarget
+
+  new Dockerfile {
+    // Base image
+    from("openjdk:8u212-jre")
+
+    // Add all files on the classpath
+    add(classpath.files, "/app/")
+
+    // Add the JAR file
+    add(jarFile, jarTarget)
+
+    //Expose the ports
+    expose(8085)
+    expose(8888) // API
+    expose(9990) // Finagle Admin page
+
+    // On launch run Java with the classpath and the main class
+    entryPointShell("java",
+      "${JAVA_OPTS}",
+//      "-XX:+PrintGC",
+//      "-XX:+PrintGCDetails",
+//      "-XX:+PrintGCDateStamps",
+//      "-Xloggc:/logs/YmsServer-${INSTANCE_NAME}.gc.log",
+//      "-XX:+UseGCLogFileRotation",
+//      "-XX:NumberOfGCLogFiles=10",
+//      "-XX:GCLogFileSize=2M",
+//      //"-Xlog:gc*:file=/logs/YmsService-${INSTANCE_NAME}.gc.log:utctime,uptime,level,tags:filecount=10,filesize=1024000",
+//      "-XX:+HeapDumpOnOutOfMemoryError",
+//      "-XX:HeapDumpPath=/logs",
+//      "-Djava.rmi.server.hostname=${HOSTIP}",
+//      "-Dcom.sun.management.jmxremote",
+//      "-Dcom.sun.management.jmxremote.port=${RMI_PORT}",
+//      "-Dcom.sun.management.jmxremote.rmi.port=${RMI_PORT}",
+//      "-Dcom.sun.management.jmxremote.local.only=false",
+//      "-Dcom.sun.management.jmxremote.authenticate=false",
+//      "-Dcom.sun.management.jmxremote.ssl=false",
+      "-cp", classpathString,  mainclass , "-kafka.state.dir=kafka-stream-state/$HOSTNAME")
+  }
+
+}
